# STUDIO-EVENT

./: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
.claude/: settings.local.json
STUDIO-EVENT/: README.md
app/: globals.css  layout.tsx  page.tsx
app/_components/: landing-header-nav.tsx  landing-illustrations.tsx
app/momentum/: layout.tsx  momentum.css  page.tsx
app/pricing/: page.tsx
app/studio/: layout.tsx  page.tsx
components/brand/: logo.tsx
components/modules/: enrichment-insight.tsx  next-step-card.tsx  staleness-banner.tsx
components/studio/: brief-form.tsx  event-copilot.tsx  result-sections.tsx  (+1 more)
lib/: eventStrategyEngine.ts  eventStrategyProfiles.ts  momentum-bridge.ts
momentum/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
momentum/apps/api/: main.py  momentum.db  pyproject.toml
momentum/apps/api/api/: main.py
momentum/apps/api/api/models/: interpretation.py
momentum/apps/api/api/routers/: interpretation.py
momentum/apps/api/api/services/insights/: insight_engine.py
momentum/apps/api/config/: interpretation_rules.py
momentum/apps/api/models/: interpretation.py
momentum/apps/api/routers/: analytics.py  campaigns.py  interpretation.py  projects.py
momentum/apps/api/services/insights/: insight_engine.py
momentum/apps/api/src/momentum_api/: __init__.py  main.py  models.py
momentum/apps/api/src/momentum_api.egg-info/: PKG-INFO  top_level.txt
momentum/apps/api/src/momentum_api/routers/: initiatives.py  tenants.py
(+91 files in other folders)
